--- a/lib/views/_documento.html.haml
+++ b/lib/views/_documento.html.haml
@@ -37,7 +37,7 @@
       .tab-pane#nfe-dest
         = render 'documento_nfe_03_dest', :xml => xml
       .tab-pane#nfe-itens
-        Itens
+        = render 'documento_nfe_04_itens', :xml => xml
       .tab-pane#nfe-totais
         = render 'documento_nfe_05_totais', :xml => xml
       .tab-pane#nfe-comex
