--- a/lib/views/_documento_nfe_03_dest.html.haml
+++ b/lib/views/_documento_nfe_03_dest.html.haml
@@ -16,7 +16,7 @@
     %th CEP
   %tr
     %td= xml.css('NFe infNFe dest xBairro').text
-    %td= f xml.css('NFe infNFe dest CEP').text, mask: :cep
+    %td= f xml.css('NFe infNFe dest CEP').text, :mask => :cep
   %tr
     %th(colspan=2) Município
   %tr
