--- a/lib/views/_documento.html.haml
+++ b/lib/views/_documento.html.haml
@@ -1,4 +1,4 @@
-%section.visualizacao-documento
+%section.ruby-nfe-visdoc
   %table.table.table-condensed.table-striped
     %tr
       %th Chave de Acesso
