--- a/lib/views/_modal_nfe_produto.html.haml
+++ b/lib/views/_modal_nfe_produto.html.haml
@@ -4,7 +4,7 @@
     %a.close(data-dismiss="modal") ×
     %h3 Detalhes do Item #{det.attr('nItem')}: #{prod.css('xProd').text}
   .modal-body
-    %section.visualizacao-documento
+    %section.ruby-nfe-visdoc
       %table.table.table-condensed.table-striped.inner
         %col(width='25%' span=4)/
         %tr
